--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,61 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.example.vocabularybuilder">
-<!--    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>-->
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-<!--    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>-->
+    package="com.example.vocabularybuilder">
+    <!-- <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
-        android:theme="@style/Theme.VocabularyBuilder"
         android:allowBackup="true"
-        android:label="Vocabulary Builder"
         android:icon="@mipmap/ic_launcher"
+        android:label="Vocabulary Builder"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.VocabularyBuilder"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".QuizActivity"
+            android:exported="false" />
+        <!-- <application -->
+        <!-- android:allowBackup="true" -->
+        <!-- android:theme="@style/Theme.VocabularyBuilder" -->
+        <!-- android:supportsRtl="true" -->
+        <!-- android:label="Vocabulary Builder" -->
+        <!-- android:icon="@mipmap/ic_launcher"> -->
+        <!-- Login Page (Launches First) -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<!--    <application-->
-<!--    android:allowBackup="true"-->
-<!--    android:theme="@style/Theme.VocabularyBuilder"-->
-<!--    android:supportsRtl="true"-->
-<!--    android:label="Vocabulary Builder"-->
-<!--    android:icon="@mipmap/ic_launcher">-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- Main (Home) Page -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" /> <!-- Add New Word Page -->
+        <activity
+            android:name=".AddWordActivity"
+            android:exported="false" /> <!-- View Words Page -->
+        <activity
+            android:name=".ViewWordsActivity"
+            android:exported="false" /> <!-- Profile Page -->
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity android:name=".ReminderActivity" />
 
-    <!-- Login Page (Launches First) -->
-    <activity android:name=".LoginActivity"
-        android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN"/>
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
-    </activity>
+        <receiver
+            android:name=".ReminderReceiver"
+            android:exported="false" />
+    </application>
 
-    <!-- Main (Home) Page -->
-    <activity android:name=".MainActivity"
-        android:exported="false"/>
-
-    <activity android:name=".RegisterActivity"
-        android:exported="false"/>
-    <!-- Add New Word Page -->
-    <activity android:name=".AddWordActivity"
-        android:exported="false"/>
-
-    <!-- View Words Page -->
-    <activity android:name=".ViewWordsActivity"
-        android:exported="false"/>
-
-    <!-- Profile Page -->
-    <activity android:name=".ProfileActivity"
-        android:exported="false"/>
-    <activity android:name=".ReminderActivity"/>
-
-    <receiver android:name=".ReminderReceiver" android:exported="false"/>
-
-</application>
 </manifest>
